@@ -1351,6 +1351,24 @@ int test_trig(void)
 }
 
 
+/* I computed the values of zeta for s = -1e-10, 0, 1e-10 using the
+   Jensen formula,
+
+   zeta(s) = 1/2 + 1/(1-s) 
+     + integ(sin(s arctan(t))/((1+t^2)^(s/2)(exp(2pi*t)-1)), s, 0, inf)
+     
+   transforming the integral from a semi-infinite range to the range 
+   [0,pi/2] using the substitution t = tan(u).  After Taylor expansion
+   in s and numerical evaluation of the integrals this gave,
+
+   zeta(s) = 1/2 + 1/(1-s)
+             + (0.0810614667944862 +/- 2e-16) s
+             + (-3.17822795429232e-3 +/- 2e-17) s^2 
+             + ....
+             
+   for an expansion about s = 0  [BJG 7/01]
+*/
+
 int test_zeta(void)
 {
   gsl_sf_result r;
@@ -1365,6 +1383,13 @@ int test_zeta(void)
   TEST_SF(s, gsl_sf_zeta_e, (-51, &r), 9.68995788746359406565e+24, TEST_TOL1, GSL_SUCCESS);
   TEST_SF(s, gsl_sf_zeta_e, (-5, &r), -0.003968253968253968253968, TEST_TOL1, GSL_SUCCESS);
   TEST_SF(s, gsl_sf_zeta_e, (-0.5, &r), -0.207886224977354566017307, TEST_TOL1, GSL_SUCCESS);
+
+  TEST_SF(s, gsl_sf_zeta_e, (-1e-10, &r), -0.49999999990810614668948, TEST_TOL0, GSL_SUCCESS);
+
+  TEST_SF(s, gsl_sf_zeta_e, (0, &r), -0.5, TEST_TOL0, GSL_SUCCESS);
+
+  TEST_SF(s, gsl_sf_zeta_e, (1e-10, &r), -0.50000000009189385333058, TEST_TOL0, GSL_SUCCESS);
+
   TEST_SF(s, gsl_sf_zeta_e, (0.5, &r), -1.460354508809586812889499, TEST_TOL0, GSL_SUCCESS);
   TEST_SF(s, gsl_sf_zeta_e, (1.0-1.0/1024.0, &r), -1023.4228554489429787, TEST_TOL0, GSL_SUCCESS);
   TEST_SF(s, gsl_sf_zeta_e, (1.0+1.0/1048576, &r), 1.0485765772157343441e+06, TEST_TOL0, GSL_SUCCESS);
